--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,14 @@ on:
       - main
     paths:
       - 'backend/**/*.java'
-      - 'backend/**/pom.xml'
+      - 'backend/Active-Learning-project/pom.xml'
       - 'backend/**/*.sql'
   pull_request:
     branches:
       - main
     paths:
       - 'backend/**/*.java'
-      - 'backend/**/pom.xml'
+      - 'backend/Active-Learning-project/pom.xml'
       - 'backend/**/*.sql'
 
 jobs:
