--- a/backend/Active-Learning-project/pom.xml
+++ b/backend/Active-Learning-project/pom.xml
@@ -15,6 +15,8 @@
 	<description>Active Learning project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>active-learning-project-portal</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,6 +56,7 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
