added mock interceptor

--- a/frontend/Active-learning-project/angular.json
+++ b/frontend/Active-learning-project/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "alp",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -94,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "58ccefe8-2541-4383-a3b7-ddda1a82536f"
   }
 }
