--- a/frontend/Active-learning-project/angular.json
+++ b/frontend/Active-learning-project/angular.json
@@ -26,9 +26,10 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
-            ],
-            "scripts": []
+              "src/styles.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+            ]
+          
           },
           "configurations": {
             "production": {
