--- a/frontend/Active-learning-project/package.json
+++ b/frontend/Active-learning-project/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.1.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.6.3",
+    "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "ngx-toastr": "^16.0.2",
