--- a/backend/Active-Learning-project/src/main/resources/application.properties
+++ b/backend/Active-Learning-project/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/User_management
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+logging.level.org.springframework.context=DEBUG
+active_learning_project.app.jwtSecret= activeLearningProjectSecretKey
+active_learning_project.app.jwtExpirationMs= 86400000
