--- a/frontend/Active-learning-project/package.json
+++ b/frontend/Active-learning-project/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^1.3.2",
     "@angular/animations": "^15.1.3",
     "@angular/cdk": "^15.0.3",
     "@angular/common": "^15.1.0",
@@ -23,10 +24,11 @@
     "@angular/router": "^15.1.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.6.3",
-    "angularx-social-login": "^4.1.0",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "ngx-toastr": "^16.0.2",
+    "query-string": "^8.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
