--- a/frontend/Active-learning-project/angular.json
+++ b/frontend/Active-learning-project/angular.json
@@ -53,7 +53,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -62,10 +68,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Active-learning-project:build:production"
+              "browserTarget": "Active-learning-project:build:production",
+              "proxyConfig":"src/proxy.conf.json"
             },
             "development": {
-              "browserTarget": "Active-learning-project:build:development"
+              "browserTarget": "Active-learning-project:build:development",
+              "proxyConfig":"src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +81,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Active-learning-project:build"
+            "browserTarget": "Active-learning-project:build",
+            "proxyConfig":"src/proxy.conf.json"
           }
         },
         "test": {
