--- a/frontend/Active-learning-project/package.json
+++ b/frontend/Active-learning-project/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@coreui/angular": "^4.3.11",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.6.3",
     "axios": "^1.3.2",
