--- a/frontend/Active-learning-project/package.json
+++ b/frontend/Active-learning-project/package.json
@@ -27,9 +27,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.6.3",
-    "@syncfusion/ej2-angular-kanban": "^21.1.35",
+    "@popperjs/core": "^2.11.6",
+    "lodash": "^4.17.21",
+    "mdb-angular-ui-kit": "^2.3.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -44,6 +47,7 @@
     "@angular/cli": "~15.1.3",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.186",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
